<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/cabin"
                android:gravity="center"
                android:text="Registro de Usuario"
                android:textColor="@color/ColorLinea"
                android:textSize="40sp" />
            <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginTop="20sp"
                        >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"

                        android:src="@drawable/name" />
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tfnom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5sp"
                            >
                    <android.support.design.widget.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/nombre"
                        android:inputType="textPersonName" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="10sp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/name" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tfape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                >
                <android.support.design.widget.TextInputEditText
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidos"
                    />

            </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginTop="10sp"
                    >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/mail" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tfcor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5sp"
                        >

                <android.support.design.widget.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="10sp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/password" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tfpas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="10sp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/password"
                    />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tfrpa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"

                >
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repass"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
                </LinearLayout   >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="5"
                android:layout_marginTop="15sp"
                android:background="@color/ColorLinea"
                android:fontFamily="@font/cabin"
                android:onClick="registrar"
                android:text="@string/registrar"
                android:textColor="@color/Colorletrabtn"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="Registro de\nAbogados"
                android:fontFamily="@font/cabin"
                android:layout_weight="0.2"
                android:onClick="toRegAct"
                android:layout_marginBottom="30sp"
                android:ems="6"
                android:textSize="15sp"
                android:layout_marginStart="60sp"
                android:background="@color/Colorbtn"
                android:textColor="@color/Colorletrabtn"
                android:layout_gravity="bottom"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"/>

        </LinearLayout>



    </ScrollView>


</LinearLayout>